Added Firebase dependencies to the project

--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@ buildscript {
     repositories {
         google()
         maven { url "https://jitpack.io" }
+        mavenCentral()  // Maven Central repository
     }
 
     dependencies {
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
 
