--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'com.github.Zhuinden:fragmentviewbindingdelegate-kt:1.0.0'
     implementation "io.insert-koin:koin-android:3.3.0"
     implementation "io.insert-koin:koin-core:3.2.0"
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0")
     //endregion
 
     //region Navigation Libraries
