upload photo preview works created the layout for a full recipe description

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     //region Components
     implementation "com.github.tapadoo:alerter:7.2.4"
     implementation 'com.mikhaellopez:circularimageview:4.3.1'
+    implementation 'com.github.chnouman:AwesomeDialog:1.0.5'
     //endregion
 
 
@@ -68,6 +69,8 @@ dependencies {
     //region Navigation Libraries
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
+    implementation ("androidx.activity:activity-ktx:1.7.1")
+    implementation ("androidx.fragment:fragment-ktx:1.5.7")
     //endregion
 
     //region Firebase
