Fixed a bug that crashed the app if no photo was taken during the update profile flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode="adjustPan
-"
+            android:windowSoftInputMode="adjustResize"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,5 +42,4 @@
                 android:value="" />
         </activity>
     </application>
-
 </manifest>
