--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,10 +56,14 @@ dependencies {
     implementation "com.github.tapadoo:alerter:7.2.4"
     implementation 'com.mikhaellopez:circularimageview:4.3.1'
     implementation 'com.github.chnouman:AwesomeDialog:1.0.5'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     //endregion
 
 
     //region Architecture libraries
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'com.github.Zhuinden:fragmentviewbindingdelegate-kt:1.0.0'
     implementation "io.insert-koin:koin-android:3.3.0"
     implementation "io.insert-koin:koin-core:3.2.0"
@@ -78,6 +82,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
+
     //endregion
 
     //region Standard android libraries
