--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.github.chnouman:AwesomeDialog:1.0.5'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+    implementation 'com.github.vinodbaste:ImageCompressor:1.0.1'
     //endregion
 
 
